karnc/tests/fixtures/positive/182_tokens_jose_adapter/src/auth/sessions.karn
context auth.sessions

consumes tokens { Jwt }

service login {
  on call() -> Effect[String] given Jwt {
    let token <- Jwt.sign(Claims { sub: "u1", exp: 0 })
    token
  }
}
