karnc/tests/fixtures/negative/117_queue_invalid_name/src/svc.karn
context svc

service worker {
  on queue "" (message: String) -> Effect[Result[(), String]] {
    Ok(())
  }
}
